--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
   <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 
-
-
 <body>
   <div id="page-wrapper">
     <header id="header">
@@ -47,27 +45,25 @@
 	  <li>List 4</li>        
 	</ul>
        <div id="center">
-          <iframe width="400" height="300" src="https://www.youtube.com/embed/-jn9aaNn8_I?si=D1HhLAWQ5awY9BfU" frameborder="0" "allowfullscreen"></iframe>
+          <iframe width="400" height="300" src="https://www.youtube.com/embed/-jn9aaNn8_I?si=D1HhLAWQ5awY9BfU" frameborder="0"></iframe>
        </div>
      </div>
      <aside id="side-content">
 	   <h3>Interesting Articles</h3>
 	     <ol id="news">
                <li><a href="#">Article 1</a></li>
-	     <p>Preview of very interesting article article</p>
+	       <li>Preview of very interesting article article</li>
 	       <li><a href="#">Article 2</a></li>
-             <p>Preview of very interesting article article</p>
+               <li>Preview of very interesting article article</li>
 	       <li><a href="#">Article 3</a></li>
-	     <p>Preview of very interesting article article</p>
+	       <li>Preview of very interesting article article</li>
 	       <li><a href="#">Article 4</a></li>
-             <p>Preview of very interesting article article</p>
+               <li>Preview of very interesting article article</li>
 	     </ol>
      </aside>
-   </main> 
-    
+   </main>     
  <footer id="footer">Footer Content is here</footer>
  <hr>
  </div>
 </body>
-
 </html>
