--- a/index.html
+++ b/index.html
@@ -48,13 +48,13 @@
         <h3>Interesting Articles</h3>
         <ol id="news">
           <li><a href="#">Article 1</a></li>
-          <li>Preview of very interesting article article</li>
+          <li><p>Preview of very interesting article article</p></li>
           <li><a href="#">Article 2</a></li>
-          <li>Preview of very interesting article article</li>
+          <li><p>Preview of very interesting article article</p></li>
           <li><a href="#">Article 3</a></li>
-          <li>Preview of very interesting article article</li>
+          <li><p>Preview of very interesting article article</p></li>
           <li><a href="#">Article 4</a></li>
-          <li>Preview of very interesting article article</li>
+          <li><p>Preview of very interesting article article</p></li>
         </ol>
       </aside>
     </main>
