--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zxx">
 
 <head>
   <title>Main Page</title>
@@ -48,17 +48,19 @@
         <h3>Interesting Articles</h3>
         <ol id="news">
           <li><a href="#">Article 1</a></li>
-          <li><p>Preview of very interesting article article</p></li>
+          <li>Preview of very interesting article article</li>
           <li><a href="#">Article 2</a></li>
-          <li><p>Preview of very interesting article article</p></li>
+          <li>Preview of very interesting article article</li>
           <li><a href="#">Article 3</a></li>
-          <li><p>Preview of very interesting article article</p></li>
+          <li>Preview of very interesting article article</li>
           <li><a href="#">Article 4</a></li>
-          <li><p>Preview of very interesting article article</p></li>
+          <li>Preview of very interesting article article</li>
         </ol>
       </aside>
     </main>
-    <footer id="footer">Footer Content is here</footer>
+    <footer id="footer">
+      <p>Footer Content is here</p>
+    </footer>
     <hr>
   </div>
 </body>
