--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="zxx">
 
 <head>
+  <meta charset="UTF-8">
   <title>Main Page</title>
   <link href='http://fonts.googleapis.com/css?family=Devonshire' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" type="text/css" href="css/normalize.css">
