--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
 
 <body>
   <div id="page-wrapper">
-    <header id="header"> <a id="logo1" href="index.html"><img src="images/logo3.png" alt="logo3"></a>
-      <h1>My Demo Site</h1> <a id="toplink" href="https://www.fileformat.info/info/unicode/char/2699/index.htm">&#9881;</a>
+    <header id="header"> 
+      <a id="logo1" href="index.html"><img src="images/logo3.png" alt="logo3"></a>
+      <h1>My Demo Site</h1> 
+      <a id="toplink" href="https://www.fileformat.info/info/unicode/char/2699/index.htm">&#9881;</a>
     </header>
     <nav id="main-nav">
       <ul>
@@ -25,15 +27,16 @@
     </nav>
     <main id="content-wrapper">
       <div id="main-content">
-        <h2><strong>This is our h2 Tag</strong></h2> <img class="imageR" src="images/main.png" alt="main">
+        <h2><strong>This is our h2 Tag</strong></h2> 
+        <img class="imageR" src="images/main.png" alt="main logo for juice company">
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, perferendis, sed ab sequi molestias eum sint consectetur dicta praesentium ipsa repellat soluta placeat dolor! Accusantium impedit est explicabo harum aperiam!</p>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, perferendis, sed ab sequi molestias eum sint consectetur dicta praesentium ipsa repellat soluta placeat dolor! Accusantium impedit est explicabo harum aperiam!</p>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, perferendis, sed ab sequi molestias eum sint consectetur dicta praesentium ipsa repellat soluta placeat dolor! Accusantium impedit est explicabo harum aperiam!</p>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, perferendis, sed ab sequi molestias eum sint consectetur dicta praesentium ipsa repellat soluta placeat dolor! Accusantium impedit est explicabo harum aperiam!</p>
         <ul id="bul1">
-          <li> List 1</li>
+          <li>List 1</li>
           <li>List 2</li>
-          <li> List 3</li>
+          <li>List 3</li>
           <li>List 4</li>
         </ul>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, perferendis, sed ab sequi molestias eum sint consectetur dicta praesentium ipsa repellat soluta placeat dolor! Accusantium impedit est explicabo harum aperiam!</p>
@@ -43,7 +46,9 @@
           <li>List 3</li>
           <li>List 4</li>
         </ul>
-        <div id="center"> <iframe width="400" height="300" src="https://www.youtube.com/embed/-jn9aaNn8_I?si=D1HhLAWQ5awY9BfU"></iframe> </div>
+        <div id="center"> 
+          <iframe width="400" height="300" src="https://www.youtube.com/embed/-jn9aaNn8_I?si=D1HhLAWQ5awY9BfU"></iframe> 
+        </div>
       </div>
       <aside id="side-content">
         <h3>Interesting Articles</h3>
